<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="@dimen/activity_vertical_margin">

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        style="@style/AppTheme.Base"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        card_view:cardCornerRadius="@dimen/cardCornerRadius"
        card_view:contentPadding="@dimen/contentPadding">

        <LinearLayout
            style="@style/AppTheme.Base"
            android:orientation="vertical">

            <TextView
                style="@style/AppTheme.TextView"
                android:text="@string/quiz_1" />

            <RadioGroup
                android:id="@+id/quiz_1"
                style="@style/AppTheme.Base.Spacing">

                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/quiz_1_a_choice"
                    style="@style/AppTheme.Base"
                    android:text="@string/quiz_1_a_choice" />

                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/quiz_1_b_choice"
                    style="@style/AppTheme.Base"
                    android:text="@string/quiz_1_b_choice" />

                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/quiz_1_c_choice"
                    style="@style/AppTheme.Base"
                    android:text="@string/quiz_1_c_choice" />

                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/quiz_1_d_choice"
                    style="@style/AppTheme.Base"
                    android:text="@string/quiz_1_d_choice" />
            </RadioGroup>

            <TextView
                style="@style/AppTheme.TextView"
                android:text="@string/quiz_2" />

            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/quiz_2_a_choice"
                style="@style/AppTheme.Base"
                android:text="@string/quiz_2_a_choice" />

            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/quiz_2_b_choice"
                style="@style/AppTheme.Base"
                android:text="@string/quiz_2_b_choice" />

            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/quiz_2_c_choice"
                style="@style/AppTheme.Base.Spacing"
                android:text="@string/quiz_2_c_choice" />

            <TextView
                style="@style/AppTheme.TextView"
                android:text="@string/quiz_3" />

            <ImageView
                style="@style/AppTheme.Base.Spacing"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/chandra" />

            <RadioGroup
                android:id="@+id/quiz_3"
                style="@style/AppTheme.Base.Spacing">

                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/quiz_3_a_choice"
                    style="@style/AppTheme.Base"
                    android:text="@string/quiz_3_a_choice" />

                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/quiz_3_b_choice"
                    style="@style/AppTheme.Base"
                    android:text="@string/quiz_3_b_choice" />

                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/quiz_3_c_choice"
                    style="@style/AppTheme.Base"
                    android:text="@string/quiz_3_c_choice" />

                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/quiz_3_d_choice"
                    style="@style/AppTheme.Base"
                    android:text="@string/quiz_3_d_choice" />
            </RadioGroup>

            <TextView
                style="@style/AppTheme.TextView"
                android:text="@string/quiz_4" />

            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/quiz_4_a_choice"
                style="@style/AppTheme.Base"
                android:text="@string/quiz_4_a_choice" />

            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/quiz_4_b_choice"
                style="@style/AppTheme.Base"
                android:text="@string/quiz_4_b_choice" />

            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/quiz_4_c_choice"
                style="@style/AppTheme.Base"
                android:text="@string/quiz_4_c_choice" />

            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/quiz_4_d_choice"
                style="@style/AppTheme.Base.Spacing"
                android:layout_marginBottom="@dimen/quiz_spacing"
                android:text="@string/quiz_4_d_choice" />

            <TextView
                style="@style/AppTheme.TextView"
                android:text="@string/quiz_5" />

            <android.support.design.widget.TextInputEditText
                android:id="@+id/quiz_5_edit_text"
                style="@style/AppTheme.Base" />

            <Button
                android:id="@+id/submit_button"
                style="@style/AppTheme.Base"
                android:text="@string/submit" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

</ScrollView>
